# mongo-mcp-test

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile.graphql  Dockerfile.mcp  Dockerfile.rest  PLAN.md  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
docs/: AGENTS.md  ARCHITECTURE.md  DESIGN.md  PLAN-k8s-scalability.md  PLAN-multilayer.md
k8s/: configmap.yaml  graphql-deployment.yaml  graphql-hpa.yaml  graphql-service.yaml  mcp-deployment.yaml  mcp-service.yaml  rest-deployment.yaml  rest-service.yaml
scripts/: seed_data.py
src/bank_ods/: config.py  logging_config.py
src/bank_ods/db/: __init__.py  client.py  indexes.py
src/bank_ods/graphql/: app.py  resolvers.py  sdl.py
src/bank_ods/mcp/: __main__.py  server.py  tools.py
src/bank_ods/models/: __init__.py  account.py  base.py  cash_balance.py  position.py  registry.py  security.py  settlement.py  transaction.py
src/bank_ods/rest/: app.py  errors.py
src/bank_ods/rest/routers/: accounts.py  balances.py  positions.py  settlements.py  transactions.py
src/bank_ods/services/: __init__.py  _common.py  accounts.py  balances.py  positions.py  settlements.py  transactions.py
tests/: conftest.py  test_graphql.py  test_parity.py  test_rest.py  test_services.py
